--- a/SafeTravel/Info.plist
+++ b/SafeTravel/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseAuthorization</key>
+	<string>Test</string>
 </dict>
 </plist>
