Location works now, started search

--- a/SafeTravel/Info.plist
+++ b/SafeTravel/Info.plist
@@ -51,5 +51,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Let us know where you are!</string>
 </dict>
 </plist>
